opam-version: "2.0"
name: "bridge"
version: "0.1"
synopsis: "A compiler"
description: "A stack based functional programming language"
maintainer: "Owain Lewis owain@owainlewis.com"
authors: "Owain Lewis owain@owainlewis.com"
license: ""
homepage: "https://github.com/owainlewis/bridge"
bug-reports: "https://github.com/owainlewis/bridge"
dev-repo: "https://github.com/owainlewis/bridge"
depends: [ "ocaml" "ocamlfind" "dune" "menhir" ]
build: ["dune" "build"]